--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="./imagens/scissor.png" />
                     </div>
                 </div>
-                <div class="score">
+                <div class="score_play">
                     <strong id="score_player">2</strong>
                     <span>-</span>
                     <strong id="score_computer">1</strong>
@@ -66,7 +66,49 @@
             </section>
         </main>
         <footer>
-            
+            <strong>Placar Partidas</strong>
+            <div class="score">
+                <span id="partida_1"
+                    >Partida 1
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_2"
+                    >Partida 2
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_3"
+                    >Partida 3
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_4"
+                    >Partida 4
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_5"
+                    >Partida 5
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_6"
+                    >Partida 6
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_7"
+                    >Partida 7
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_8"
+                    >Partida 8
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_9"
+                    >Partida 9
+                    <div class="winner">V</div>
+                </span>
+                <span id="partida_"
+                    >Ganhador
+                    <div class="winner">W</div>
+                </span>
+            </div>
         </footer>
     </body>
 </html>
