--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
-        <script src="./script.js"></script>
+
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
@@ -48,9 +48,9 @@
                     </div>
                 </div>
                 <div class="score_play">
-                    <strong id="score_player">2</strong>
+                    <strong id="score_player">-</strong>
                     <span>-</span>
-                    <strong id="score_computer">1</strong>
+                    <strong id="score_computer">-</strong>
                 </div>
             </section>
             <section class="gameControls">
@@ -111,4 +111,5 @@
             </div>
         </footer>
     </body>
+    <script src="./script.js"></script>
 </html>
