--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                     </div>
                 </div>
                 <div class="score_play">
-                    <strong id="score_player">-</strong>
+                    <strong id="score_player">
+                        <img class="jogador" src="./imagens/jogador.png"
+                    /></strong>
                     <span>-</span>
-                    <strong id="score_computer">-</strong>
+                    <strong id="score_computer">
+                        <img class="robo" src="./imagens/robo.png"
+                    /></strong>
                 </div>
             </section>
             <section class="gameControls">
@@ -70,43 +74,43 @@
             <div class="score">
                 <span id="partida_1"
                     >Partida 1
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_2"
                     >Partida 2
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_3"
                     >Partida 3
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_4"
                     >Partida 4
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_5"
                     >Partida 5
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_6"
                     >Partida 6
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_7"
                     >Partida 7
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_8"
                     >Partida 8
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
                 <span id="partida_9"
                     >Partida 9
-                    <div class="winner">V</div>
+                    <div class="winner"></div>
                 </span>
-                <span id="partida_"
+                <span id="finalScore"
                     >Ganhador
-                    <div class="winner">W</div>
+                    <div class="winner"></div>
                 </span>
             </div>
         </footer>
