Jo Ken Po - Ajustando Responsividade

--- a/index.html
+++ b/index.html
@@ -39,23 +39,25 @@
         <main>
             <section class="game">
                 <div class="options">
-                    <div id="option_player" class="img_options">
-                        <img src="./imagens/rock.png" />
+                    <div class="playerContainer">
+                        <h2>Jogador</h2>
+                        <div id="option_player" class="img_options">
+                            <img src="./imagens/rock.png" />
+                        </div>
+                        <strong id="score_player"></strong>
                     </div>
                     <span>X</span>
-                    <div id="option_computer" class="img_options">
-                        <img src="./imagens/scissor.png" />
+                    <div class="playerContainer">
+                        <h2>Robô</h2>
+                        <div id="option_computer" class="img_options">
+                            <img src="./imagens/scissor.png" />
+                        </div>
+                        <strong id="score_computer"></strong>
                     </div>
                 </div>
-                <div class="score_play">
-                    <strong id="score_player">
-                        <img class="jogador" src="./imagens/jogador.png"
-                    /></strong>
+                <!-- <div class="score_play">
                     <span>-</span>
-                    <strong id="score_computer">
-                        <img class="robo" src="./imagens/robo.png"
-                    /></strong>
-                </div>
+                </div> -->
             </section>
             <section class="gameControls">
                 <button id="rock">
